--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Monitor cloudwatch metrics by calculating how long it will take them to reach a specified set of thresholds",
   "main": "monitor.js",
+  "bin": {
+    "aws-cloudwatch-monitor": "monitor.js"
+  },
   "dependencies": {
     "aws-sdk": "^2.7.27",
     "highland": "^2.10.1",
